--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,7 +13,7 @@
     "incremental": true,
     "skipLibCheck": true,
     "strict": true,
-    "strictNullChecks": false,
+    // "strictNullChecks": false,
     // "noImplicitAny": false,
     // "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
