--- a/backend/config/.env.example
+++ b/backend/config/.env.example
@@ -8,3 +8,7 @@ DATABASE_HOST=127.0.0.1
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=123
 DATABASE_SYNCRONIZE=true
+
+# jwt
+JWT_SECRET=
+JWT_EXPIRES_IN=3600
